--- a/portfolio/biostyle.css
+++ b/portfolio/biostyle.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Rubik', sans-serif;
-    font-size: 1rem;
+    font-size: 1 rem;
     line-height: 1.5;
     min-height: 100vh;
     background: #fff;
@@ -38,3 +38,14 @@ body {
     background-color: #FFF3C7;
     text-align: center;
 }
+
+.container-fluid{
+    
+  background-color:#FFF7FC;
+}
+
+.university {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: small;
+}
+
