--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');
 
 
+nav{
+  font-size:2rem;
+  color:#333;
+}
 
 body {
     font-family: 'Rubik', sans-serif;
@@ -89,16 +93,27 @@ img{
   margin:40px;
   padding: 15px;
   border-style:double;
-  /*background-color:#8B93FF;*/
+ 
   box-shadow: 0 -5px 5px -5px #333, 
               0 5px 5px -5px #333;
               animation: shimmy 3s infinite;
               animation-direction: alternate;
 }
 
-.container-fluid{
-    
-  background-color:#ffe3e2;
+.navbar-transparent {
+  background-color: rgba(0, 0, 0, 0); 
+}
+
+
+.navbar-transparent .navbar-brand,
+.navbar-transparent .nav-link {
+  color: white; 
+}
+
+
+.navbar-transparent .nav-link:hover,
+.navbar-transparent .nav-link:focus {
+  color: #ccc; 
 }
 
 .contactme {
@@ -127,5 +142,127 @@ img{
   }
   100% {
     transform: translate(20px, 20px);
+  }
+}
+.speech-bubble {
+	position: relative;
+	background: #ffe3e2;
+	border-radius: .4em;
+  font-size:3px;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 47px solid transparent;
+	border-top-color:#ffe3e2;
+	border-bottom: 0;
+	border-left: 0;
+	margin-left: -23.5px;
+	margin-bottom: -47px;
+  font-size: 3px;
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+body{
+  background:#000 url(https://unsplash.it/1600/1000/?random);
+  background-size:cover;
+  background-position:center;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.header{
+    $ref: &;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.9);  
+    color: $text;
+    padding: 0 $spacer*2;
+    box-shadow: 0 0 40px rgba(0,0,0,0.03);
+    height: 6rem;
+    display: flex;
+    align-items:center;
+    gap: 3rem;
+  }
+
+  
+  
+  &__link{
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+    align-items: center;
+    justify-content: center;
+    height: $linkHeight;
+    width: $linkWidth;
+    color: $text;
+    transition: $transition;
+    text-decoration: none;
+    width: $linkWidth;
+    text-transform: uppercase;
+    transition: 500ms ease all;
+    svg{
+      transition: 500ms ease all;
+    }
+    &:hover{
+      svg{
+        stroke: $primary;
+      }
+    }
+    .navbar:not(:hover) &:focus,
+    &:hover{
+      span{
+        opacity: 1;
+        transform: translate(0);
+      }
+    }
+  }
+  &__item{
+    &:last-child{
+      &:before {
+        content: '';
+        position: absolute;
+        left: -8rem;
+        margin-left: $linkWidth/2;
+        bottom: -1.25rem;
+        height: 0.5rem;
+        width: 2px;
+        background: $primary;
+        $speedlineColor: rgba(#fff,0.2);
+        $speedGap: 3rem;
+        $shadow : 0 -0.5rem $primary,0 -0.5rem $primary, 0 0 $speedGap 0.5rem $primary,2rem 0 0 $speedlineColor, -$speedGap 0 0 $speedlineColor;
+        @for $i from 2 to 120{
+          $shadow: $shadow + #{","}+ $i*$speedGap 0 0 $speedlineColor;
+          $shadow: $shadow + #{","}+ $i*-$speedGap 0 0 $speedlineColor;
+        }
+        box-shadow: $shadow;
+        transition: 500ms ease all;
+      }
+    }
+    
+    @for $i from 1 to 12 {
+      &:first-child:nth-last-child(#{$i}),
+      &:first-child:nth-last-child(#{$i}) ~ li {
+        @for $j from 1 to $i {
+          &:nth-child(#{$j}):hover, {
+            ~ li:last-child:before {
+              left: (100% / $i) * ($j - 1);
+            }
+          }
+        }
+        &:last-child:hover:before, {
+          left: (100% / $i) * ($i - 1);
+        }
+      }
+    }
+    
   }
 }
